Add simple selector

--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
         <div class="main-box">
                 <div class="display-border">
                         <div id="display">
-                                <p>game 1</p>
-                                <p>game 1</p>
-                                <p>game 1</p>
-                                <p class="selected">game 1</p>
-                                <p>game 1</p>
-                                <p>game 1</p>
-                                <p>game 1</p>
-                                <p>game 1</p>
-                                <p>game 1</p>
                         </div>
                 </div>
                 <p class="title">
                 Nontendo <strong>GAME PICKER</strong>™
                 </p>
+                
+                <div>
+                <input id="gameInput"></input>
+                <button id="addBtn">Add</button>
+                </div>
+                
+                <div>
+                <button id="selBtn">PICK!</button>
+                <button id="clearBtn">Clear</button>
+                <button id="resetBtn">Reset</button>
+                </div>
         </div>
         </div>
+
+        <script src="app.js"></script>
 </body>
 </html>
