Add button design

--- a/index.html
+++ b/index.html
@@ -15,15 +15,27 @@
                 Nontendo <strong>GAME PICKER</strong>™
                 </p>
                 
-                <div>
+                <div class="input-box">
                 <input id="gameInput"></input>
-                <button id="addBtn">Add</button>
+                <div class=btn-box>
+                        <button id="addBtn"></button>
+                        <span>Add</span>
+                </div>
                 </div>
                 
-                <div>
-                <button id="selBtn">PICK!</button>
-                <button id="clearBtn">Clear</button>
-                <button id="resetBtn">Reset</button>
+                <div class="buttons">
+                <div class=btn-box>
+                        <button id="selBtn"></button>
+                        <span>PICK!</span>
+                </div>
+                <div class=btn-box>
+                        <button class="grey" id="clearBtn"></button>
+                        <span>Clear</span>
+                </div>
+                <div class=btn-box>
+                        <button class="grey" id="resetBtn"></button>
+                        <span>Reset</span>
+                </div>
                 </div>
         </div>
         </div>
