--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <span>Clear</span>
                 </div>
                 <div class=btn-box>
-                        <button class="grey" id="resetBtn"></button>
+                        <button class="grey" id="resetBtn" disabled></button>
                         <span>Reset</span>
                 </div>
                 </div>
