Add roulette mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <button id="addBtn"></button>
                         <span>Add</span>
                 </div>
+                <input type="checkbox" id="rouletteMode">roulette mode</input>
                 </div>
                 
                 <div class="buttons">
